--- a/views/status.ejs
+++ b/views/status.ejs
@@ -36,7 +36,7 @@
                 <% } %>
             </h2>
             <p class="mt-4">
-                <a href="/" class="btn btn-outline-primary">Return to Homepage</a>
+                <a href="/ascott/booking" class="btn btn-outline-primary">Return to Homepage</a>
             </p>
             </div>
         </div>
